--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,2 @@
-p {
-  font-family: Lato;
-}
+/* You can add global styles to this file, and also import other style files */
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
