Implementación del login

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,3 +1,4 @@
 <p>
-	home works!
+	Login Exitoso!
 </p>
+<button routerLink="/login" (click)="onLogout()" type="button" class="btn btn-warning">LOGOUT</button>
