--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,4 +1,22 @@
-<p>
-	Login Exitoso!
-</p>
-<button routerLink="/login" (click)="onLogout()" type="button" class="btn btn-warning">LOGOUT</button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+	<a class="navbar-brand" href="#">Ministerio de trabajo</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+	<div class="collapse navbar-collapse" id="navbarText">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+				<a class="nav-link" routerLinkActive="active" routerLink="aprobacion">Subir Archivos
+					<span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" routerLinkActive="active" routerLink="historial">Historial</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" routerLinkActive="active" routerLink="perfil">Perfil</a>
+			</li>
+			<button routerLink="/login" (click)="onLogout()">Logout</button>
+		</ul>
+	</div>
+</nav>
+<router-outlet></router-outlet>
