--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,21 +1,22 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-	<a class="navbar-brand" href="#">Ministerio de trabajo</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<a class="navbar-brand" href="#">Ministerio</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-	<div class="collapse navbar-collapse" id="navbarText">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link" routerLinkActive="active" routerLink="aprobacion">Subir Archivos
-					<span class="sr-only">(current)</span></a>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" routerLink="aprobacion">Inicio <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" routerLinkActive="active" routerLink="historial">Historial</a>
+				<a class="nav-link" routerLink="aprobacion">Subir archivos</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" routerLinkActive="active" routerLink="perfil">Perfil</a>
+				<a class="nav-link" routerLink="historial">Historial</a>
 			</li>
-			<button routerLink="/login" (click)="onLogout()">Logout</button>
+			<li class="nav-item">
+				<a class="nav-link disabled" routerLink="perfil">Perfil</a>
+			</li>
 		</ul>
 	</div>
 </nav>
