--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
 	<a class="navbar-brand" href="#">Ministerio</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
 				<a class="nav-link" routerLink="historial">Historial</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link disabled" routerLink="perfil">Perfil</a>
+				<a class="nav-link" routerLink="perfil">Perfil</a>
 			</li>
 		</ul>
 	</div>
