--- a/src/app/modules/home/modules/historial/historial.component.html
+++ b/src/app/modules/home/modules/historial/historial.component.html
@@ -1,5 +1,12 @@
 <mat-tab-group mat-align-tabs="center">
-	<mat-tab label="First">Content 1</mat-tab>
-	<mat-tab label="Second">Content 2</mat-tab>
-	<mat-tab label="Third">Content 3</mat-tab>
+	<mat-tab label="En espera">
+		<app-espera></app-espera>
+	</mat-tab>
+	<mat-tab label="Aprobado">
+		<app-aprobado></app-aprobado>
+	</mat-tab>
+	<mat-tab label="Rechazado">
+		<app-rechazado></app-rechazado>
+	</mat-tab>
 </mat-tab-group>
+<router-outlet></router-outlet>
