--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
-	<a class="navbar-brand" href="#">Ministerio</a>
+	<a class="navbar-brand" routerLink="inicio">Ministerio</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" routerLink="aprobacion">Inicio <span class="sr-only">(current)</span></a>
+				<a class="nav-link" routerLink="inicio">Inicio <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" routerLink="aprobacion">Subir archivos</a>
@@ -19,5 +19,6 @@
 			</li>
 		</ul>
 	</div>
+	<button type="button" (click)="onLogout()" class="btn btn-light">Logout</button>
 </nav>
 <router-outlet></router-outlet>
