--- a/src/app/modules/home/modules/inicio/inicio.component.html
+++ b/src/app/modules/home/modules/inicio/inicio.component.html
@@ -1,3 +1,21 @@
-<p>
-	ETESECH
-</p>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img class="d-block w-100" src="https://www.portafolio.co/files/article_multimedia/uploads/2020/06/04/5ed99cdadf9cb.jpeg" alt="First slide">
+    </div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="https://laresistencia.info/wp-content/uploads/2020/02/78848677_2393742994210611_7286959449900580864_n.jpg" alt="Second slide">
+    </div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src="https://www.tvmax-9.com/futbol_nacional/Liga-Panamena-Futbol-protocolo-bioseguridad_16686943.png" alt="Third slide">
+    </div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
