--- a/src/app/modules/home/modules/aprobacion/aprobacion.component.html
+++ b/src/app/modules/home/modules/aprobacion/aprobacion.component.html
@@ -1,3 +1,40 @@
-<p>
-aprobacion works!
-</p>
+<form>
+	<div class="row">
+		<div class="col">
+			<label for="exampleFormControlInput1">Sucursal</label>
+			<input type="text" class="form-control" placeholder="First name">
+    </div>
+			<div class="col">
+				<label for="exampleFormControlInput1">Numero de telefono</label>
+				<input type="text" class="form-control" placeholder="Numero de telefono">
+    </div>
+			</div>
+			&nbsp;
+			&nbsp;
+			&nbsp;
+			<div class="form-group">
+				<label for="exampleFormControlInput1">Email address</label>
+				<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+				<div class="form-group">
+					<label for="exampleFormControlTextarea1">Example textarea</label>
+					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+				</div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+				<div class="form-group">
+					<label for="exampleFormControlTextarea1">Example textarea</label>
+					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+				</div>
+        &nbsp;
+				&nbsp;
+				&nbsp;
+				<div class="form-group">
+					<label for="exampleFormControlTextarea1">Example textarea</label>
+					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+				</div>
+</form>
