--- a/src/app/modules/home/modules/aprobacion/aprobacion.component.html
+++ b/src/app/modules/home/modules/aprobacion/aprobacion.component.html
@@ -1,40 +1,36 @@
 <form>
 	<div class="row">
 		<div class="col">
-			<label for="exampleFormControlInput1">Sucursal</label>
-			<input type="text" class="form-control" placeholder="First name">
+			<label for="exampleFormControlInput1">Nombre Empresa</label>
+			<input type="text" class="form-control" placeholder="Empresa">
     </div>
 			<div class="col">
-				<label for="exampleFormControlInput1">Numero de telefono</label>
-				<input type="text" class="form-control" placeholder="Numero de telefono">
+				<label for="exampleFormControlInput1">Tipo de Negocio</label>
+				<input type="text" class="form-control" placeholder="Negocio">
     </div>
 			</div>
 			&nbsp;
 			&nbsp;
-			&nbsp;
 			<div class="form-group">
-				<label for="exampleFormControlInput1">Email address</label>
-				<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+				<label for="exampleFormControlInput1">Dirección</label>
+				<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="San miguel Calacoto Local 230">
   </div>
 				&nbsp;
 				&nbsp;
-				&nbsp;
 				<div class="form-group">
-					<label for="exampleFormControlTextarea1">Example textarea</label>
+					<label for="exampleFormControlTextarea1">Requisitos</label>
 					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 				</div>
 				&nbsp;
 				&nbsp;
-				&nbsp;
 				<div class="form-group">
-					<label for="exampleFormControlTextarea1">Example textarea</label>
+					<label for="exampleFormControlTextarea1">Capacidad Maxíma</label>
 					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 				</div>
-        &nbsp;
 				&nbsp;
 				&nbsp;
 				<div class="form-group">
-					<label for="exampleFormControlTextarea1">Example textarea</label>
+					<label for="exampleFormControlTextarea1">Etc</label>
 					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 				</div>
 </form>
