--- a/src/app/modules/home/modules/aprobacion/aprobacion.component.html
+++ b/src/app/modules/home/modules/aprobacion/aprobacion.component.html
@@ -6,31 +6,37 @@
     </div>
 			<div class="col">
 				<label for="exampleFormControlInput1">Tipo de Negocio</label>
-				<input type="text" class="form-control" placeholder="Negocio">
-    </div>
+				<select class="form-control">
+        <option>Restaurante</option>
+        <option>Gimnasio</option>
+        <option>Café</option>
+        <option>Educación</option>
+        <option>Religión</option>
+</select>
+			</div>
+		</div>
+		&nbsp;
+		&nbsp;
+		<div class="form-group">
+			<label for="exampleFormControlInput1">Dirección</label>
+			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="San miguel Calacoto Local 230">
+  </div>
+			&nbsp;
+			&nbsp;
+			<div class="form-group">
+				<label for="exampleFormControlTextarea1">Requisitos</label>
+				<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 			</div>
 			&nbsp;
 			&nbsp;
 			<div class="form-group">
-				<label for="exampleFormControlInput1">Dirección</label>
-				<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="San miguel Calacoto Local 230">
-  </div>
-				&nbsp;
-				&nbsp;
-				<div class="form-group">
-					<label for="exampleFormControlTextarea1">Requisitos</label>
-					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-				</div>
-				&nbsp;
-				&nbsp;
-				<div class="form-group">
-					<label for="exampleFormControlTextarea1">Capacidad Maxíma</label>
-					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-				</div>
-				&nbsp;
-				&nbsp;
-				<div class="form-group">
-					<label for="exampleFormControlTextarea1">Etc</label>
-					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-				</div>
+				<label for="exampleFormControlTextarea1">Capacidad Maxíma</label>
+				<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+			</div>
+			&nbsp;
+			&nbsp;
+			<div class="form-group">
+				<label for="exampleFormControlTextarea1">Etc</label>
+				<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+			</div>
 </form>
