--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -1,4 +1,4 @@
-:host {
+/* :host {
   border: 4px green;
   width: 100%;
   height: 100%;
@@ -18,4 +18,4 @@
 .example-header-image {
   background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
   background-size: cover;
-}
+} */
