--- a/src/app/modules/login/login.component.css
+++ b/src/app/modules/login/login.component.css
@@ -1,19 +1,24 @@
 :host {
-  border: 4px green;
+  /* border: 4px green; */
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #ffc107;
+  background: radial-gradient(ellipse at center,#003144 0,#001f2b 44%,#000c11 100%);
+  background-image: url("https://lh3.googleusercontent.com/proxy/gMYXoM6BNQcomGEPVa_97jYQhTtmnvAfV30qk4CvE_N3Af_IPAzWYwqN-Xqd_Kv4zOL2-WPkIwyB1bMcsdehaQxiofvb_hbtCEpD3Z0yb4E17MUDBO1l");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 .example-card {
-  max-width: 500px;
+  /* max-width: 500px; */
   align-items: center;
   justify-content: center;
-  margin-top: 250px;
-  margin-bottom: 400px;
-  background: #fffc;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  background: #ffffff;
 }
 .example-header-image {
   background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
