--- a/src/app/modules/home/modules/aprobacion/aprobacion.component.html
+++ b/src/app/modules/home/modules/aprobacion/aprobacion.component.html
@@ -3,15 +3,15 @@
 		<mat-card-title>Formulario</mat-card-title>
 	</mat-card-header>
 	<mat-card-content>
-		<form>
+		<form [formGroup]="formularioForm">
 			<div class="row">
 				<div class="col">
 					<label for="exampleFormControlInput1">Nombre Empresa</label>
-					<input type="text" class="form-control" placeholder="Empresa">
+					<input type="text" formControlName="nombre" class="form-control" placeholder="Empresa">
     </div>
 					<div class="col">
 						<label for="exampleFormControlInput1">Tipo de Negocio</label>
-						<select class="form-control">
+						<select class="form-control" formControlName="negocio">
         <option>Restaurante</option>
         <option>Gimnasio</option>
         <option>Café</option>
@@ -24,29 +24,25 @@
 				&nbsp;
 				<div class="form-group">
 					<label for="exampleFormControlInput1">Dirección</label>
-					<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="San miguel Calacoto Local 230">
+					<input type="email" class="form-control" formControlName="direccion" id="exampleFormControlInput1" placeholder="San miguel Calacoto Local 230">
   </div>
 					&nbsp;
 					&nbsp;
 					<div class="form-group">
 						<label for="exampleFormControlTextarea1">Requisitos</label>
-						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+						<textarea class="form-control" formControlName="requisitos" id="exampleFormControlTextarea1" rows="3"></textarea>
 					</div>
 					&nbsp;
 					&nbsp;
 					<div class="form-group">
-						<label for="exampleFormControlTextarea1">Capacidad Maxíma</label>
-						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+						<label for="exampleFormControlTextarea1">Propuesta</label>
+						<textarea class="form-control" formControlName="propuesta" id="exampleFormControlTextarea1" rows="3"></textarea>
 					</div>
 					&nbsp;
 					&nbsp;
-					<div class="form-group">
-						<label for="exampleFormControlTextarea1">Etc</label>
-						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-					</div>
 		</form>
 	</mat-card-content>
 	<mat-card-actions style="text-align:center">
-		<button mat-button  (click)="onRegister()" >Enviar</button>
+		<button mat-button (click)="onCreate()" >Enviar</button>
 	</mat-card-actions>
 </mat-card>
