--- a/src/app/modules/home/modules/historial/components/espera/espera.component.html
+++ b/src/app/modules/home/modules/historial/components/espera/espera.component.html
@@ -26,6 +26,18 @@
 		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
 	</ng-container>
 
+	<!-- Detalles -->
+	<ng-container matColumnDef="detalles">
+		<th mat-header-cell *matHeaderCellDef> Detalles </th>
+		<td mat-cell *matCellDef="let element"> <button type="button" class="btn btn-light">Detalles</button> </td>
+	</ng-container>
+
+	<!-- Delete -->
+	<ng-container matColumnDef="delete">
+		<th mat-header-cell *matHeaderCellDef> Borrar </th>
+		<td mat-cell *matCellDef="let element"> <button type="button" class="btn btn-light">Borrar</button> </td>
+	</ng-container>
+
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
