--- a/src/app/modules/home/modules/historial/components/rechazado/rechazado.component.html
+++ b/src/app/modules/home/modules/historial/components/rechazado/rechazado.component.html
@@ -4,26 +4,39 @@
 
 	<!-- Position Column -->
 	<ng-container matColumnDef="position">
-		<th mat-header-cell *matHeaderCellDef> No. </th>
+		<th mat-header-cell *matHeaderCellDef> ID </th>
 		<td mat-cell *matCellDef="let element"> {{element.position}} </td>
 	</ng-container>
 
 	<!-- Name Column -->
 	<ng-container matColumnDef="name">
-		<th mat-header-cell *matHeaderCellDef> Name </th>
+		<th mat-header-cell *matHeaderCellDef> Sucursal </th>
 		<td mat-cell *matCellDef="let element"> {{element.name}} </td>
 	</ng-container>
 
 	<!-- Weight Column -->
 	<ng-container matColumnDef="weight">
-		<th mat-header-cell *matHeaderCellDef> Weight </th>
+		<th mat-header-cell *matHeaderCellDef> Negocio </th>
 		<td mat-cell *matCellDef="let element"> {{element.weight}} </td>
 	</ng-container>
 
 	<!-- Symbol Column -->
 	<ng-container matColumnDef="symbol">
-		<th mat-header-cell *matHeaderCellDef> Symbol </th>
+		<th mat-header-cell *matHeaderCellDef> Estado </th>
 		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+	</ng-container>
+
+	<!-- Detalles -->
+	<ng-container matColumnDef="detalles">
+		<th mat-header-cell *matHeaderCellDef> Detalles </th>
+		<td mat-cell *matCellDef="let element"> <button type="button" class="btn btn-light">Detalles</button> </td>
+	</ng-container>
+
+	<!-- Delete -->
+	<ng-container matColumnDef="delete">
+		<th mat-header-cell *matHeaderCellDef> Borrar </th>
+		<td mat-cell *matCellDef="let element">
+			<button type="button" class="btn btn-light">Borrar</button> </td>
 	</ng-container>
 
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
