--- a/src/app/modules/home/modules/historial/components/aprobado/aprobado.component.html
+++ b/src/app/modules/home/modules/historial/components/aprobado/aprobado.component.html
@@ -3,27 +3,27 @@
         The actual rendered columns are set as a property on the row definition" -->
 
 	<!-- Position Column -->
-	<ng-container matColumnDef="position">
+	<ng-container matColumnDef="id">
 		<th mat-header-cell *matHeaderCellDef> ID </th>
-		<td mat-cell *matCellDef="let element"> {{element.position}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.ownerId}} </td>
 	</ng-container>
 
 	<!-- Name Column -->
-	<ng-container matColumnDef="name">
+	<ng-container matColumnDef="sucursal">
 		<th mat-header-cell *matHeaderCellDef> Sucursal </th>
-		<td mat-cell *matCellDef="let element"> {{element.name}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.sucursal}} </td>
 	</ng-container>
 
 	<!-- Weight Column -->
-	<ng-container matColumnDef="weight">
+	<ng-container matColumnDef="negocio">
 		<th mat-header-cell *matHeaderCellDef> Negocio </th>
-		<td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.negocio}} </td>
 	</ng-container>
 
 	<!-- Symbol Column -->
-	<ng-container matColumnDef="symbol">
+	<ng-container matColumnDef="estado">
 		<th mat-header-cell *matHeaderCellDef> Estado </th>
-		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.estado}} </td>
 	</ng-container>
 
 	<!-- Detalles -->
@@ -35,13 +35,38 @@
 	<!-- Delete -->
 	<ng-container matColumnDef="delete">
 		<th mat-header-cell *matHeaderCellDef> Borrar </th>
-		<td mat-cell *matCellDef="let element"> <button type="button" class="btn btn-light">Borrar</button> </td>
+		<td mat-cell *matCellDef="let element">
+			<button type="button" class="btn btn-light">Borrar</button> </td>
 	</ng-container>
 
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
-<!-- Copyright 2020 Google LLC. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
+<body>
+	<div *ngFor="let message of aprobados" style="padding: 50px; display: flex; justify-content: center;">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
+					<div class="card card-elegant">
+						<div class="card-block">
+							<h5 class="card-title text-uppercase"><small>Prueba</small>
+							</h5>
+							<p class="card-text text-justify">
+								Su ID: {{message.ownerId}}
+							</p>
+							<p class="card-text text-justify">
+								Sucursal: {{message.sucursal}}
+							</p>
+							<p class="card-text text-justify">
+								Estado: {{message.estado}}
+							</p>
+							<a class="btn btn-link text-uppercase">Atentamente Alerta Covid</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<button type="button" (click)="onDelete(message.id)" class="btn btn-light">Borrar</button>
+		</div>
+	</div>
+</body>
