--- a/src/app/modules/home/modules/historial/components/rechazado/rechazado.component.html
+++ b/src/app/modules/home/modules/historial/components/rechazado/rechazado.component.html
@@ -3,25 +3,25 @@
         The actual rendered columns are set as a property on the row definition" -->
 
 	<!-- Position Column -->
-	<ng-container matColumnDef="position">
+	<ng-container matColumnDef="id">
 		<th mat-header-cell *matHeaderCellDef> ID </th>
 		<td mat-cell *matCellDef="let element"> {{element.position}} </td>
 	</ng-container>
 
 	<!-- Name Column -->
-	<ng-container matColumnDef="name">
+	<ng-container matColumnDef="sucursal">
 		<th mat-header-cell *matHeaderCellDef> Sucursal </th>
 		<td mat-cell *matCellDef="let element"> {{element.name}} </td>
 	</ng-container>
 
 	<!-- Weight Column -->
-	<ng-container matColumnDef="weight">
+	<ng-container matColumnDef="negocio">
 		<th mat-header-cell *matHeaderCellDef> Negocio </th>
 		<td mat-cell *matCellDef="let element"> {{element.weight}} </td>
 	</ng-container>
 
 	<!-- Symbol Column -->
-	<ng-container matColumnDef="symbol">
+	<ng-container matColumnDef="estado">
 		<th mat-header-cell *matHeaderCellDef> Estado </th>
 		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
 	</ng-container>
