--- a/src/app/modules/home/modules/inicio/inicio.component.html
+++ b/src/app/modules/home/modules/inicio/inicio.component.html
@@ -7,7 +7,7 @@
 				<img class="d-block w-100" src="https://laresistencia.info/wp-content/uploads/2020/02/78848677_2393742994210611_7286959449900580864_n.jpg" alt="Second slide">
     </div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="https://www.tvmax-9.com/futbol_nacional/Liga-Panamena-Futbol-protocolo-bioseguridad_16686943.png" alt="Third slide">
+					<img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiPp0vm-8Vf2g56-TSmwsM3bpT07-qhN094w&usqp=CAU" alt="Third slide">
     </div>
 				</div>
 				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -19,3 +19,21 @@
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
+			<!-- Masthead-->
+			<header class="masthead bg-primary text-white text-center">
+				<div class="container d-flex align-items-center flex-column">
+					<!-- Masthead Avatar Image-->
+					<img class="masthead-avatar mb-5" src="https://mcaconsultores.com/wp-content/uploads/2020/06/foto-toma-temperatura-blog-protocolo-626x407.jpg" alt="" />
+					<!-- Masthead Heading-->
+					<h4 class="masthead-heading text-uppercase mb-0">Bienvenido al sector de aprobacion de planes de
+						seguridad para el trbajo por parte del Ministerio de Trabajo</h4>
+					<!-- Icon Divider-->
+					<div class="divider-custom divider-light">
+						<div class="divider-custom-line"></div>
+						<div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+						<div class="divider-custom-line"></div>
+					</div>
+					<!-- Masthead Subheading-->
+					<p class="masthead-subheading font-weight-light mb-0">no se que poner aqui gg</p>
+				</div>
+			</header>
