--- a/src/app/modules/audit-home/modules/audit-approve/audit-approve.component.html
+++ b/src/app/modules/audit-home/modules/audit-approve/audit-approve.component.html
@@ -1,1 +1,48 @@
-<p>audit-approve works!</p>
+<mat-card class="example-card">
+	<mat-card-header justify-content:center align-items:center>
+		<mat-card-title>Formulario</mat-card-title>
+	</mat-card-header>
+	<mat-card-content>
+		<form [formGroup]="formularioForm">
+			<div class="row">
+				<div class="col">
+					<label for="exampleFormControlInput1">Nombre Empresa</label>
+					<input type="text" formControlName="nombre" class="form-control" placeholder="Empresa">
+    </div>
+					<div class="col">
+						<label for="exampleFormControlInput1">Tipo de Negocio</label>
+						<select class="form-control" formControlName="negocio">
+        <option>Restaurante</option>
+        <option>Gimnasio</option>
+        <option>Café</option>
+        <option>Educación</option>
+        <option>Religión</option>
+</select>
+					</div>
+				</div>
+				&nbsp;
+				&nbsp;
+				<div class="form-group">
+					<label for="exampleFormControlInput1">Dirección</label>
+					<input type="email" class="form-control" formControlName="direccion" id="exampleFormControlInput1" placeholder="San miguel Calacoto Local 230">
+  </div>
+					&nbsp;
+					&nbsp;
+					<div class="form-group">
+						<label for="exampleFormControlTextarea1">Requisitos</label>
+						<textarea class="form-control" formControlName="requisitos" id="exampleFormControlTextarea1" rows="3"></textarea>
+					</div>
+					&nbsp;
+					&nbsp;
+					<div class="form-group">
+						<label for="exampleFormControlTextarea1">Propuesta</label>
+						<textarea class="form-control" formControlName="propuesta" id="exampleFormControlTextarea1" rows="3"></textarea>
+					</div>
+					&nbsp;
+					&nbsp;
+		</form>
+	</mat-card-content>
+	<mat-card-actions style="text-align:center">
+		<button mat-button (click)="onCreate()" >Enviar</button>
+	</mat-card-actions>
+</mat-card>
