--- a/src/app/modules/audit-home/modules/audit-history/components/waiting/waiting.component.html
+++ b/src/app/modules/audit-home/modules/audit-history/components/waiting/waiting.component.html
@@ -1,29 +1,30 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 	<!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+		The actual rendered columns are set as a property on the row definition" 
+	-->
 
 	<!-- Position Column -->
-	<ng-container matColumnDef="position">
+	<ng-container matColumnDef="ownerId">
 		<th mat-header-cell *matHeaderCellDef> ID </th>
-		<td mat-cell *matCellDef="let element"> {{element.position}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.ownerId}} </td>
 	</ng-container>
 
 	<!-- Name Column -->
-	<ng-container matColumnDef="name">
+	<ng-container matColumnDef="nombre">
 		<th mat-header-cell *matHeaderCellDef> Sucursal </th>
-		<td mat-cell *matCellDef="let element"> {{element.name}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
 	</ng-container>
 
 	<!-- Weight Column -->
-	<ng-container matColumnDef="weight">
+	<ng-container matColumnDef="negocio">
 		<th mat-header-cell *matHeaderCellDef> Negocio </th>
-		<td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.negocio}} </td>
 	</ng-container>
 
 	<!-- Symbol Column -->
-	<ng-container matColumnDef="symbol">
+	<ng-container matColumnDef="estado">
 		<th mat-header-cell *matHeaderCellDef> Estado </th>
-		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.estado}} </td>
 	</ng-container>
 
 	<!-- Document Column -->
