--- a/src/app/modules/home/modules/historial/components/espera/espera.component.html
+++ b/src/app/modules/home/modules/historial/components/espera/espera.component.html
@@ -3,27 +3,40 @@
         The actual rendered columns are set as a property on the row definition" -->
 
 	<!-- Position Column -->
-	<ng-container matColumnDef="position">
+	<ng-container matColumnDef="id">
 		<th mat-header-cell *matHeaderCellDef> ID </th>
 		<td mat-cell *matCellDef="let element"> {{element.position}} </td>
 	</ng-container>
 
 	<!-- Name Column -->
-	<ng-container matColumnDef="name">
+	<ng-container matColumnDef="sucursal">
 		<th mat-header-cell *matHeaderCellDef> Sucursal </th>
 		<td mat-cell *matCellDef="let element"> {{element.name}} </td>
 	</ng-container>
 
 	<!-- Weight Column -->
-	<ng-container matColumnDef="weight">
+	<ng-container matColumnDef="negocio">
 		<th mat-header-cell *matHeaderCellDef> Negocio </th>
 		<td mat-cell *matCellDef="let element"> {{element.weight}} </td>
 	</ng-container>
 
 	<!-- Symbol Column -->
-	<ng-container matColumnDef="symbol">
+	<ng-container matColumnDef="estado">
 		<th mat-header-cell *matHeaderCellDef> Estado </th>
 		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+	</ng-container>
+
+	<!-- Detalles -->
+	<ng-container matColumnDef="detalles">
+		<th mat-header-cell *matHeaderCellDef> Detalles </th>
+		<td mat-cell *matCellDef="let element"> <a mdbBtn color="white" outline="true" class="wow fadeInDown waves-light" data-wow-delay="0.4s" mdbWavesEffect routerLink="/auditHome/audit-approve" > Ver Detalle </a></td>
+	</ng-container>
+
+	<!-- Delete -->
+	<ng-container matColumnDef="delete">
+		<th mat-header-cell *matHeaderCellDef> Borrar </th>
+		<td mat-cell *matCellDef="let element">
+			<button type="button" class="btn btn-light">Borrar</button> </td>
 	</ng-container>
 
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
