back up ckeditor

--- a/src/app/modules/home/modules/aprobacion/aprobacion.component.html
+++ b/src/app/modules/home/modules/aprobacion/aprobacion.component.html
@@ -46,3 +46,6 @@
 		<button mat-button (click)="onCreate()" >Enviar</button>
 	</mat-card-actions>
 </mat-card>
+
+<ckeditor [(ngModel)]="ckeditorContent">
+</ckeditor> 
