--- a/src/app/modules/home/modules/historial/components/aprobado/aprobado.component.html
+++ b/src/app/modules/home/modules/historial/components/aprobado/aprobado.component.html
@@ -29,7 +29,8 @@
 	<!-- Detalles -->
 	<ng-container matColumnDef="detalles">
 		<th mat-header-cell *matHeaderCellDef> Detalles </th>
-		<td mat-cell *matCellDef="let element"> <button type="button" class="btn btn-light">Detalles</button> </td>
+		<a mdbBtn color="white" outline="true" class="wow fadeInDown waves-light" data-wow-delay="0.4s" mdbWavesEffect
+			routerLink="">Ver Detalle</a>
 	</ng-container>
 
 	<!-- Delete -->
