--- a/src/app/modules/home/modules/historial/components/espera/espera.component.html
+++ b/src/app/modules/home/modules/historial/components/espera/espera.component.html
@@ -30,7 +30,8 @@
 	<ng-container matColumnDef="detalles">
 		<th mat-header-cell *matHeaderCellDef> Detalles </th>
 		<td mat-cell *matCellDef="let element"> <a mdbBtn color="white" outline="true"
-				class="wow fadeInDown waves-light" data-wow-delay="0.4s" mdbWavesEffect routerLink="">Ver Detalle</a>
+				class="wow fadeInDown waves-light" data-wow-delay="0.4s" mdbWavesEffect routerLink="detalle">Ver
+				Detalle</a>
 		</td>
 	</ng-container>
 
