--- a/src/app/modules/login/login.component.css
+++ b/src/app/modules/login/login.component.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   background: radial-gradient(ellipse at center,#003144 0,#001f2b 44%,#000c11 100%);
-  background-image: url("https://lh3.googleusercontent.com/proxy/gMYXoM6BNQcomGEPVa_97jYQhTtmnvAfV30qk4CvE_N3Af_IPAzWYwqN-Xqd_Kv4zOL2-WPkIwyB1bMcsdehaQxiofvb_hbtCEpD3Z0yb4E17MUDBO1l");
+  background-image: url("https://fundacioncarlosslim.org/wp-content/uploads/2018/12/capacitate-para-el-empleo-seguridad-e-higiene-en-ambiente-laboral-1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
