--- a/src/app/modules/home/modules/historial/components/espera/espera.component.html
+++ b/src/app/modules/home/modules/historial/components/espera/espera.component.html
@@ -31,7 +31,7 @@
 		<th mat-header-cell *matHeaderCellDef> Detalles </th>
 		<td mat-cell *matCellDef="let element"> 
 			<a mdbBtn color="white" outline="true" class="wow fadeInDown waves-light" 
-			data-wow-delay="0.4s" mdbWavesEffect routerLink="detalle" (click)="sendElement(element)" >Ver
+			data-wow-delay="0.4s" mdbWavesEffect  (click)="sendElement(element)" >Ver
 				Detalle</a>
 		</td>
 	</ng-container>
