--- a/src/app/modules/audit-home/modules/audit-history/components/waiting/waiting.component.html
+++ b/src/app/modules/audit-home/modules/audit-history/components/waiting/waiting.component.html
@@ -5,14 +5,14 @@
 
 	<!-- Position Column -->
 	<ng-container matColumnDef="ownerId">
-		<th mat-header-cell *matHeaderCellDef> ID </th>
-		<td mat-cell *matCellDef="let element"> {{element.ownerId}} </td>
+		<th mat-header-cell *matHeaderCellDef> Nombre de Empresa </th>
+		<td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
 	</ng-container>
 
 	<!-- Name Column -->
 	<ng-container matColumnDef="nombre">
 		<th mat-header-cell *matHeaderCellDef> Sucursal </th>
-		<td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
 	</ng-container>
 
 	<!-- Weight Column -->
