--- a/src/app/modules/home/modules/historial/components/espera/espera.component.html
+++ b/src/app/modules/home/modules/historial/components/espera/espera.component.html
@@ -4,14 +4,14 @@
 
 	<!-- Position Column -->
 	<ng-container matColumnDef="id">
-		<th mat-header-cell *matHeaderCellDef> ID </th>
-		<td mat-cell *matCellDef="let element"> {{element.ownerId}} </td>
+		<th mat-header-cell *matHeaderCellDef> Nombre de la Empresa </th>
+		<td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
 	</ng-container>
 
 	<!-- Name Column -->
 	<ng-container matColumnDef="sucursal">
 		<th mat-header-cell *matHeaderCellDef> Sucursal </th>
-		<td mat-cell *matCellDef="let element"> {{element.sucursal}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
 	</ng-container>
 
 	<!-- Weight Column -->
@@ -39,7 +39,7 @@
 	<ng-container matColumnDef="delete">
 		<th mat-header-cell *matHeaderCellDef> Borrar </th>
 		<td mat-cell *matCellDef="let element">
-			<button type="button" class="btn btn-light">Borrar</button> </td>
+			<button type="button" class="btn btn-light" (click)="onDelete(element.id)">Borrar</button> </td>
 	</ng-container>
 
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
