--- a/src/app/modules/home/modules/historial/historial.component.html
+++ b/src/app/modules/home/modules/historial/historial.component.html
@@ -1,12 +1,12 @@
 <mat-tab-group mat-align-tabs="center">
 	<mat-tab label="En espera">
-		<espera state="En Espera" ></espera>
+		<app-espera status="En Espera"></app-espera>
 	</mat-tab>
 	<mat-tab label="Aprobado">
-		<espera state="Aprobado"  ></espera>
+		<app-espera status="Aprobado"></app-espera>
 	</mat-tab>
 	<mat-tab label="Rechazado">
-		<espera state="Rechazado" ></espera>
+		<app-espera status="Rechazado"></app-espera>
 	</mat-tab>
 </mat-tab-group>
 <router-outlet></router-outlet>
