--- a/src/app/modules/home/modules/historial/components/espera/espera.component.html
+++ b/src/app/modules/home/modules/historial/components/espera/espera.component.html
@@ -4,14 +4,14 @@
 
 	<!-- Position Column -->
 	<ng-container matColumnDef="id">
-		<th mat-header-cell *matHeaderCellDef> ID </th>
-		<td mat-cell *matCellDef="let element"> {{element.ownerId}} </td>
+		<th mat-header-cell *matHeaderCellDef> Nombre de la Empresa </th>
+		<td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
 	</ng-container>
 
 	<!-- Name Column -->
 	<ng-container matColumnDef="sucursal">
 		<th mat-header-cell *matHeaderCellDef> Sucursal </th>
-		<td mat-cell *matCellDef="let element"> {{element.sucursal}} </td>
+		<td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
 	</ng-container>
 
 	<!-- Weight Column -->
@@ -29,9 +29,8 @@
 	<!-- Detalles -->
 	<ng-container matColumnDef="detalles">
 		<th mat-header-cell *matHeaderCellDef> Detalles </th>
-		<td mat-cell *matCellDef="let element"> 
-			<a mdbBtn color="white" outline="true" class="wow fadeInDown waves-light" 
-			data-wow-delay="0.4s" mdbWavesEffect  (click)="sendElement(element)" >Ver
+		<td mat-cell *matCellDef="let element"> <a mdbBtn color="white" outline="true"
+				class="wow fadeInDown waves-light" data-wow-delay="0.4s" mdbWavesEffect routerLink="detalle">Ver
 				Detalle</a>
 		</td>
 	</ng-container>
@@ -40,7 +39,7 @@
 	<ng-container matColumnDef="delete">
 		<th mat-header-cell *matHeaderCellDef> Borrar </th>
 		<td mat-cell *matCellDef="let element">
-			<button type="button" class="btn btn-light">Borrar</button> </td>
+			<button type="button" class="btn btn-light" (click)="onDelete(element.id)">Borrar</button> </td>
 	</ng-container>
 
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
