detalles module, done

--- a/src/app/modules/home/modules/detalle/detalle.component.html
+++ b/src/app/modules/home/modules/detalle/detalle.component.html
@@ -1,4 +1,4 @@
-<!--mat-card class="example-card">
+<mat-card class="example-card">
 	<mat-card-header justify-content:center align-items:center>
 		<mat-card-title>Formulario</mat-card-title>
 	</mat-card-header>
@@ -40,5 +40,4 @@
 		<button type="button" class="btn btn-outline-secondary" (click)="setStatus('Aprobado')" >Aceptar</button>
 		<button type="button" class="btn btn-outline-secondary"  (click)="setStatus('Rechazado')" >Rechazar</button>
 	</mat-card-actions>
-</mat-card-->
-detalles!!!!!
+</mat-card>
