Registro casi terminado

--- a/src/app/modules/login/login.component.css
+++ b/src/app/modules/login/login.component.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   background: radial-gradient(ellipse at center,#003144 0,#001f2b 44%,#000c11 100%);
-  background-image: url("https://fundacioncarlosslim.org/wp-content/uploads/2018/12/capacitate-para-el-empleo-seguridad-e-higiene-en-ambiente-laboral-1.jpg");
+  background-image: linear-gradient(rgba(255,255,255,0.6), rgba(255,255,255,0.6)), url("https://fundacioncarlosslim.org/wp-content/uploads/2018/12/capacitate-para-el-empleo-seguridad-e-higiene-en-ambiente-laboral-1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
