admin module fixed

--- a/src/app/modules/admin/modules/register/register.component.html
+++ b/src/app/modules/admin/modules/register/register.component.html
@@ -30,6 +30,6 @@
         <button mat-button >Registrar</button>
         &nbsp;
         &nbsp;
-        <button mat-button [disabled]="this.update" (click)="onUpdate()" >Actualizar</button>
+        <button mat-button >Actualizar</button>
     </mat-card-actions>
 </mat-card>
