--- a/src/app/modules/admin/modules/users/users.component.html
+++ b/src/app/modules/admin/modules/users/users.component.html
@@ -1,10 +1,12 @@
-<h1 align="center">Administrador</h1>
+<h1 style="text-align: center;" >Administrador</h1>
+
 <mat-tab-group mat-align-tabs="center">
 	<mat-tab label="Empresas">
-		<app-empresa></app-empresa>
+		<empresa state="Empresa"></empresa>
 	</mat-tab>
 	<mat-tab label="Auditores">
-		<app-auditor></app-auditor>
+		<empresa state="Auditor"></empresa>
 	</mat-tab>
 </mat-tab-group>
 <router-outlet></router-outlet>
+	
